--- a/src/assets/scss/components/_scroll_top_trigger.scss
+++ b/src/assets/scss/components/_scroll_top_trigger.scss
@@ -1,6 +1,6 @@
 // Styles for scroll-to-top trigger
+
 .scroll-top-trigger {
-  @include set-variable-single-property(right, 15px, 20px);
   background: $gray url('/assets/img/icons/arrow-up.svg') no-repeat center center;
   background-size: 25px;
   border-radius: 8px;
@@ -9,6 +9,7 @@
   height: 50px;
   opacity: 0.7;
   position: fixed;
+  right: 15px;
   text-indent: -9999px;
   transition: opacity, 0.4s;
   width: 50px;
