--- a/src/assets/scss/utilities/_mixins.scss
+++ b/src/assets/scss/utilities/_mixins.scss
@@ -1,51 +1,11 @@
 // Mixin styles
 
-// Hollow button generator
-// Mixin to create hollow buttons with solid backgrounds and white text on hover
-// @param {string} $color - Sets the default border and text colors
-// and background color on hover
-//
-@mixin hollow-btn-generator ($color) {
-  @include button-style(transparent, $color, $color);
-  border: 1px solid $color;
-
-  &:hover,
-  &:active,
-  &:focus {
-    background: $color;
-    color: $white;
-  }
-}
-
-// Defaults
-$img-directory-root: '../img' !default;
-
-// Set variable single property
-// Quick mixin for setting single property value for small and medium-up screens
-// @param {string} $property-name - the property you are going to change (e.g. margin)
-// @param {string} $small-screen-value - the value you set for small screens (e.g. 10px)
-// @param {string} $mediup-up-screen-value - the value you set for mediup-up screens (e.g. 10px)
-//
-@mixin set-variable-single-property($property-name, $small-screen-value, $medium-up-value, $large-up-value: false) {
-  #{$property-name}: $small-screen-value;
-
-  @include breakpoint(medium) {
-    #{$property-name}: $medium-up-value;
-  }
-
-  @if($large-up-value) {
-    @include breakpoint(large) {
-      #{$property-name}: $large-up-value;
-    }
-  }
-}
-
 // Interchange-full-bg-image
 // Interchange full-bg-image for retina screens
 // @param {string} $file-path - relative path to file
 // @param {string} $ext - file type (e.g. jpg, png, svg)
 //
-@mixin interchange-full-bg-image($file-path, $ext, $bg-color: $body-background) {
+@mixin full-bg-image($file-path, $ext, $bg-color: $body-background) {
   background: #{$bg-color} url("#{$img-directory-root}/#{$file-path}.#{$ext}") no-repeat center center;
   background-size: cover;
 
@@ -57,35 +17,6 @@ $img-directory-root: '../img' !default;
   (min-resolution: 1.3dppx) {
     background: #{$bg-color} url("#{$img-directory-root}/#{$file-path}.#{$ext}") no-repeat center center;
     background-size: cover;
-  }
-}
-
-// Interchange-partial-bg-image
-// Interchange partial-bg-image for retina screens
-// @param {string} $file-path - relative path to file
-// @param {string} $ext - file type (e.g. jpg, png, svg)
-// @param {string} $x - x-axis value (e.g. center, 50%)
-// @param {string} $y - y-axis value (e.g. right, 50%)
-// @param {string} $size - set background size - (e.g. cover) // default: false
-//
-@mixin interchange-partial-bg-image($file-path, $ext, $x, $y, $size: false) {
-  background: url("#{$img-directory-root}/#{$file-path}.#{$ext}") no-repeat $x $y;
-
-  @if($size) {
-    background-size: $size;
-  }
-
-  // on retina, use image that's scaled by 2 //
-  @media (min--moz-device-pixel-ratio: 1.3),
-  (-o-min-device-pixel-ratio: 2.6/2),
-  (-webkit-min-device-pixel-ratio: 1.3),
-  (min-device-pixel-ratio: 1.3),
-  (min-resolution: 1.3dppx) {
-    background: url("#{$img-directory-root}/#{$file-path}.#{$ext}") no-repeat $x $y;
-
-    @if($size) {
-      background-size: $size;
-    }
   }
 }
 
