--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -48,3 +48,8 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+@import 'utilities/all';
+@import 'base/all';
+@import 'components/all';
+@import 'pages/all';
